noinst_LTLIBRARIES=libRakNet_autopatcher.la
libRakNet_autopatcher_ladir=$(includedir)/RakNet/Autopatcher
INCLUDES=-I../../include/autopatcher
libRakNet_autopatcher_la_HEADERS=\
	Autopatcher.h\
	DownloadableFileDescriptor.h

libRakNet_autopatcher_la_SOURCES=\
	Autopatcher.cpp\
	DownloadableFileDescriptor.cpp
